tests/ui/feature-gates/feature-gate-raw-dylib-2.stderr
error[E0658]: `#[link_ordinal]` is unstable on x86
  --> $DIR/feature-gate-raw-dylib-2.rs:4:5
   |
LL |     #[link_ordinal(42)]
   |     ^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #58713 <https://github.com/crablang/crablang/issues/58713> for more information
   = help: add `#![feature(raw_dylib)]` to the crate attributes to enable

error[E0658]: `#[link_ordinal]` is unstable on x86
  --> $DIR/feature-gate-raw-dylib-2.rs:7:5
   |
LL |     #[link_ordinal(5)]
   |     ^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #58713 <https://github.com/crablang/crablang/issues/58713> for more information
   = help: add `#![feature(raw_dylib)]` to the crate attributes to enable

error: aborting due to 2 previous errors

For more information about this error, try `crablangc --explain E0658`.
